Done with section 4.7.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -55,4 +55,7 @@
         font-weight: bold;
         color: maroon;
     }
-    
+    flash {
+        color: red;
+        text-align: center;
+    }
